[gd_scene load_steps=12 format=3 uid="uid://hheh4kyr2jip"]

[ext_resource type="Script" uid="uid://djrrtio3es14q" path="res://scripts/game_objects/book_contents.gd" id="1_kbsbd"]
[ext_resource type="Texture2D" uid="uid://dvuijhdm8hesq" path="res://assets/textures/ui/pages2.png" id="2_03uoe"]
[ext_resource type="Texture2D" uid="uid://cijfm6likxvj4" path="res://icon.svg" id="3_js1vf"]
[ext_resource type="Theme" uid="uid://dkx7xsfaa3kbj" path="res://resources/themes/main/text_theme.tres" id="4_bltu5"]
[ext_resource type="StyleBox" uid="uid://c8l54s5lb8hqj" path="res://resources/themes/main/disabled_button.tres" id="5_txa8t"]
[ext_resource type="Texture2D" uid="uid://dahmcg6c4vu1t" path="res://assets/textures/ui/arrow.png" id="6_n6fcd"]
[ext_resource type="Texture2D" uid="uid://chry2egjw4uim" path="res://assets/textures/ui/close.png" id="7_sfbr3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jbj1t"]
bg_color = Color(0.356863, 0.258824, 0.188235, 0.639216)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jscy8"]
bg_color = Color(0.380325, 0.627651, 0.810656, 0.607843)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yc10j"]
bg_color = Color(0.374853, 0.624462, 0.83651, 0.270588)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yc10j"]

[node name="BookContents" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jbj1t")
script = ExtResource("1_kbsbd")

[node name="Pages" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 197.0
offset_top = 111.0
offset_right = -198.0
offset_bottom = -111.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_03uoe")

[node name="Image" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_right = 0.48
anchor_bottom = 1.0
offset_left = 389.2
offset_top = 267.0
offset_right = -50.2
offset_bottom = -270.0
grow_vertical = 2
texture = ExtResource("3_js1vf")
expand_mode = 4
stretch_mode = 5

[node name="Title" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 2065.0
offset_top = 237.0
offset_right = 3326.0
offset_bottom = 772.0
theme = ExtResource("4_bltu5")
theme_override_font_sizes/normal_font_size = 150
bbcode_enabled = true
text = "Сосна"
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.519792
anchor_top = 0.364057
anchor_right = 0.880729
anchor_bottom = 0.830477
offset_left = -0.00012207
theme = ExtResource("4_bltu5")
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
shortcut_keys_enabled = false
horizontal_alignment = 1
threaded = true
metadata/_edit_use_anchors_ = true

[node name="Next" type="Button" parent="."]
z_index = 1
layout_mode = 0
offset_left = 3331.0
offset_top = 1897.0
offset_right = 3851.0
offset_bottom = 2417.0
scale = Vector2(0.4, 0.4)
theme_override_styles/disabled = ExtResource("5_txa8t")
theme_override_styles/hover = SubResource("StyleBoxFlat_jscy8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yc10j")
theme_override_styles/normal = SubResource("StyleBoxEmpty_yc10j")
icon = ExtResource("6_n6fcd")

[node name="Back" type="Button" parent="."]
z_index = 1
layout_mode = 0
offset_left = 3246.0
offset_top = 2103.0
offset_right = 3766.0
offset_bottom = 2623.0
rotation = 3.14159
scale = Vector2(0.4, 0.4)
theme_override_styles/disabled = ExtResource("5_txa8t")
theme_override_styles/hover = SubResource("StyleBoxFlat_jscy8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yc10j")
theme_override_styles/normal = SubResource("StyleBoxEmpty_yc10j")
icon = ExtResource("6_n6fcd")

[node name="Close" type="Button" parent="."]
z_index = 1
layout_mode = 0
offset_left = 3579.0
offset_top = 1902.0
offset_right = 4099.0
offset_bottom = 2422.0
scale = Vector2(0.4, 0.4)
theme_override_styles/hover = SubResource("StyleBoxFlat_jscy8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yc10j")
theme_override_styles/normal = SubResource("StyleBoxEmpty_yc10j")
icon = ExtResource("7_sfbr3")

[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
